@@ -1,35 +1,37 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.plugins;
 
-import org.elasticsearch.action.ActionRequest;
-import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.action.ActionType;
 import org.elasticsearch.action.RequestValidators;
 import org.elasticsearch.action.admin.indices.alias.IndicesAliasesRequest;
 import org.elasticsearch.action.admin.indices.mapping.put.PutMappingRequest;
 import org.elasticsearch.action.support.ActionFilter;
+import org.elasticsearch.action.support.MappedActionFilter;
 import org.elasticsearch.action.support.TransportAction;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.IndexScopedSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.settings.SettingsFilter;
+import org.elasticsearch.features.NodeFeature;
 import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestHandler;
 import org.elasticsearch.rest.RestHeaderDefinition;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
 import java.util.Objects;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 
 /**
@@ -37,10 +39,10 @@ import java.util.function.Supplier;
  * <pre>{@code
  *   {@literal @}Override
  *   public List<ActionHandler<?, ?>> getActions() {
- *       return Arrays.asList(new ActionHandler<>(ReindexAction.INSTANCE, TransportReindexAction.class),
- *               new ActionHandler<>(UpdateByQueryAction.INSTANCE, TransportUpdateByQueryAction.class),
- *               new ActionHandler<>(DeleteByQueryAction.INSTANCE, TransportDeleteByQueryAction.class),
- *               new ActionHandler<>(RethrottleAction.INSTANCE, TransportRethrottleAction.class));
+ *       return List.of(new ActionHandler(ReindexAction.INSTANCE, TransportReindexAction.class),
+ *               new ActionHandler(UpdateByQueryAction.INSTANCE, TransportUpdateByQueryAction.class),
+ *               new ActionHandler(DeleteByQueryAction.INSTANCE, TransportDeleteByQueryAction.class),
+ *               new ActionHandler(RethrottleAction.INSTANCE, TransportRethrottleAction.class));
  *   }
  * }</pre>
  */
@@ -48,36 +50,37 @@ public interface ActionPlugin {
     /**
      * Actions added by this plugin.
      */
-    default List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
+    default Collection<ActionHandler> getActions() {
         return Collections.emptyList();
-    }
-
-    /**
-     * Client actions added by this plugin. This defaults to all of the {@linkplain ActionType} in
-     * {@linkplain ActionPlugin#getActions()}.
-     */
-    default List<ActionType<? extends ActionResponse>> getClientActions() {
-        return getActions().stream().<ActionType<? extends ActionResponse>>map(a -> a.action).toList();
     }
 
     /**
      * ActionType filters added by this plugin.
      */
-    default List<ActionFilter> getActionFilters() {
+    default Collection<ActionFilter> getActionFilters() {
+        return Collections.emptyList();
+    }
+
+    /**
+     * Action filters applying to a single action added by this plugin.
+     */
+    default Collection<MappedActionFilter> getMappedActionFilters() {
         return Collections.emptyList();
     }
 
     /**
      * Rest handlers added by this plugin.
      */
-    default List<RestHandler> getRestHandlers(
+    default Collection<RestHandler> getRestHandlers(
         Settings settings,
+        NamedWriteableRegistry namedWriteableRegistry,
         RestController restController,
         ClusterSettings clusterSettings,
         IndexScopedSettings indexScopedSettings,
         SettingsFilter settingsFilter,
         IndexNameExpressionResolver indexNameExpressionResolver,
-        Supplier<DiscoveryNodes> nodesInCluster
+        Supplier<DiscoveryNodes> nodesInCluster,
+        Predicate<NodeFeature> clusterSupportsFeature
     ) {
         return Collections.emptyList();
     }
@@ -96,23 +99,23 @@ public interface ActionPlugin {
         return Collections.emptyList();
     }
 
-    final class ActionHandler<Request extends ActionRequest, Response extends ActionResponse> {
-        private final ActionType<Response> action;
-        private final Class<? extends TransportAction<Request, Response>> transportAction;
+    final class ActionHandler {
+        private final ActionType<?> action;
+        private final Class<? extends TransportAction<?, ?>> transportAction;
 
         /**
          * Create a record of an action, the {@linkplain TransportAction} that handles it.
          */
-        public ActionHandler(ActionType<Response> action, Class<? extends TransportAction<Request, Response>> transportAction) {
+        public ActionHandler(ActionType<?> action, Class<? extends TransportAction<?, ?>> transportAction) {
             this.action = action;
             this.transportAction = transportAction;
         }
 
-        public ActionType<Response> getAction() {
+        public ActionType<?> getAction() {
             return action;
         }
 
-        public Class<? extends TransportAction<Request, Response>> getTransportAction() {
+        public Class<? extends TransportAction<?, ?>> getTransportAction() {
             return transportAction;
         }
 
@@ -126,7 +129,7 @@ public interface ActionPlugin {
             if (obj == null || obj.getClass() != ActionHandler.class) {
                 return false;
             }
-            ActionHandler<?, ?> other = (ActionHandler<?, ?>) obj;
+            ActionHandler other = (ActionHandler) obj;
             return Objects.equals(action, other.action) && Objects.equals(transportAction, other.transportAction);
         }
 
