@@ -1,19 +1,18 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.search.fetch.subphase;
 
 import org.apache.lucene.index.LeafReaderContext;
 import org.elasticsearch.common.document.DocumentField;
-import org.elasticsearch.index.mapper.IgnoredFieldMapper;
-import org.elasticsearch.index.mapper.LegacyTypeFieldMapper;
+import org.elasticsearch.index.mapper.IdFieldMapper;
 import org.elasticsearch.index.mapper.MappedFieldType;
-import org.elasticsearch.index.mapper.RoutingFieldMapper;
 import org.elasticsearch.index.mapper.SourceFieldMapper;
 import org.elasticsearch.index.query.SearchExecutionContext;
 import org.elasticsearch.search.fetch.FetchContext;
@@ -24,11 +23,11 @@ import org.elasticsearch.search.fetch.StoredFieldsSpec;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * Process stored fields loaded from a HitContext into DocumentFields
@@ -36,7 +35,7 @@ import java.util.Set;
 public class StoredFieldsPhase implements FetchSubPhase {
 
     /** Associates a field name with a mapped field type and whether or not it is a metadata field */
-    private record StoredField(String name, MappedFieldType ft, boolean isMetadataField) {
+    private record StoredField(String name, MappedFieldType ft) {
 
         /** Processes a set of stored fields using field type information */
         List<Object> process(Map<String, List<Object>> loadedFields) {
@@ -44,7 +43,8 @@ public class StoredFieldsPhase implements FetchSubPhase {
             if (inputs == null) {
                 return List.of();
             }
-            return inputs.stream().map(ft::valueForDisplay).toList();
+            // This is eventually provided to DocumentField, which needs this collection to be mutable
+            return inputs.stream().map(ft::valueForDisplay).collect(Collectors.toList());
         }
 
         boolean hasValue(Map<String, List<Object>> loadedFields) {
@@ -52,13 +52,6 @@ public class StoredFieldsPhase implements FetchSubPhase {
         }
 
     }
-
-    private static final List<StoredField> METADATA_FIELDS = List.of(
-        new StoredField("_routing", RoutingFieldMapper.FIELD_TYPE, true),
-        new StoredField("_ignored", IgnoredFieldMapper.FIELD_TYPE, true),
-        // pre-6.0 indexes can return a _type field, this will be valueless in modern indexes and ignored
-        new StoredField("_type", LegacyTypeFieldMapper.FIELD_TYPE, true)
-    );
 
     @Override
     public FetchSubPhaseProcessor getProcessor(FetchContext fetchContext) {
@@ -68,21 +61,24 @@ public class StoredFieldsPhase implements FetchSubPhase {
         }
 
         // build the StoredFieldsSpec and a list of StoredField records to process
-        List<StoredField> storedFields = new ArrayList<>(METADATA_FIELDS);
+        List<StoredField> storedFields = new ArrayList<>();
         Set<String> fieldsToLoad = new HashSet<>();
         if (storedFieldsContext.fieldNames() != null) {
             SearchExecutionContext sec = fetchContext.getSearchExecutionContext();
             for (String field : storedFieldsContext.fieldNames()) {
-                if (SourceFieldMapper.NAME.equals(field) == false) {
-                    Collection<String> fieldNames = sec.getMatchingFieldNames(field);
-                    for (String fieldName : fieldNames) {
-                        MappedFieldType ft = sec.getFieldType(fieldName);
-                        if (ft.isStored() == false) {
-                            continue;
-                        }
-                        storedFields.add(new StoredField(fieldName, ft, sec.isMetadataField(ft.name())));
-                        fieldsToLoad.add(ft.name());
+                Collection<String> fieldNames = sec.getMatchingFieldNames(field);
+                for (String fieldName : fieldNames) {
+                    // _id and _source are always retrieved anyway, no need to do it explicitly. See FieldsVisitor.
+                    // They are not returned as part of HitContext#loadedFields hence they are not added to documents by this sub-phase
+                    if (IdFieldMapper.NAME.equals(field) || SourceFieldMapper.NAME.equals(field)) {
+                        continue;
                     }
+                    MappedFieldType ft = sec.getFieldType(fieldName);
+                    if (ft.isStored() == false || sec.isMetadataField(fieldName)) {
+                        continue;
+                    }
+                    storedFields.add(new StoredField(fieldName, ft));
+                    fieldsToLoad.add(ft.name());
                 }
             }
         }
@@ -97,19 +93,11 @@ public class StoredFieldsPhase implements FetchSubPhase {
             @Override
             public void process(HitContext hitContext) {
                 Map<String, List<Object>> loadedFields = hitContext.loadedFields();
-                Map<String, DocumentField> docFields = new HashMap<>();
-                Map<String, DocumentField> metaFields = new HashMap<>();
                 for (StoredField storedField : storedFields) {
                     if (storedField.hasValue(loadedFields)) {
-                        DocumentField df = new DocumentField(storedField.name, storedField.process(loadedFields));
-                        if (storedField.isMetadataField) {
-                            metaFields.put(storedField.name, df);
-                        } else {
-                            docFields.put(storedField.name, df);
-                        }
+                        hitContext.hit().setDocumentField(new DocumentField(storedField.name, storedField.process(loadedFields)));
                     }
                 }
-                hitContext.hit().addDocumentFields(docFields, metaFields);
             }
 
             @Override
