@@ -1,20 +1,24 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.indices;
 
-import org.elasticsearch.Version;
+import org.elasticsearch.index.IndexVersion;
+import org.elasticsearch.index.IndexVersions;
 import org.elasticsearch.index.mapper.DataStreamTimestampFieldMapper;
 import org.elasticsearch.index.mapper.DocCountFieldMapper;
 import org.elasticsearch.index.mapper.FieldNamesFieldMapper;
 import org.elasticsearch.index.mapper.IdFieldMapper;
 import org.elasticsearch.index.mapper.IgnoredFieldMapper;
+import org.elasticsearch.index.mapper.IgnoredSourceFieldMapper;
 import org.elasticsearch.index.mapper.IndexFieldMapper;
+import org.elasticsearch.index.mapper.IndexModeFieldMapper;
 import org.elasticsearch.index.mapper.KeywordFieldMapper;
 import org.elasticsearch.index.mapper.Mapper;
 import org.elasticsearch.index.mapper.MapperParsingException;
@@ -29,10 +33,12 @@ import org.elasticsearch.index.mapper.SeqNoFieldMapper;
 import org.elasticsearch.index.mapper.SourceFieldMapper;
 import org.elasticsearch.index.mapper.TextFieldMapper;
 import org.elasticsearch.index.mapper.TimeSeriesIdFieldMapper;
+import org.elasticsearch.index.mapper.TimeSeriesRoutingHashFieldMapper;
 import org.elasticsearch.index.mapper.VersionFieldMapper;
+import org.elasticsearch.plugins.FieldPredicate;
 import org.elasticsearch.plugins.MapperPlugin;
 import org.elasticsearch.test.ESTestCase;
-import org.elasticsearch.test.VersionUtils;
+import org.elasticsearch.test.index.IndexVersionUtils;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -42,9 +48,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.function.Predicate;
 
+import static org.elasticsearch.test.LambdaMatchers.falseWith;
+import static org.elasticsearch.test.LambdaMatchers.trueWith;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.instanceOf;
 
@@ -77,8 +85,11 @@ public class IndicesModuleTests extends ESTestCase {
         IdFieldMapper.NAME,
         RoutingFieldMapper.NAME,
         TimeSeriesIdFieldMapper.NAME,
+        TimeSeriesRoutingHashFieldMapper.NAME,
         IndexFieldMapper.NAME,
+        IndexModeFieldMapper.NAME,
         SourceFieldMapper.NAME,
+        IgnoredSourceFieldMapper.NAME,
         NestedPathFieldMapper.NAME,
         VersionFieldMapper.NAME,
         SeqNoFieldMapper.NAME,
@@ -89,8 +100,11 @@ public class IndicesModuleTests extends ESTestCase {
     public void testBuiltinMappers() {
         IndicesModule module = new IndicesModule(Collections.emptyList());
         {
-            Version version = VersionUtils.randomVersionBetween(random(), Version.V_8_0_0, Version.CURRENT);
-            assertThat(module.getMapperRegistry().getMapperParser("object", Version.CURRENT), instanceOf(ObjectMapper.TypeParser.class));
+            IndexVersion version = IndexVersionUtils.randomVersionBetween(random(), IndexVersions.V_8_0_0, IndexVersion.current());
+            assertThat(
+                module.getMapperRegistry().getMapperParser("object", IndexVersion.current()),
+                instanceOf(ObjectMapper.TypeParser.class)
+            );
             assertFalse(module.getMapperRegistry().getMetadataMapperParsers(version).isEmpty());
             Map<String, MetadataFieldMapper.TypeParser> metadataMapperParsers = module.getMapperRegistry()
                 .getMetadataMapperParsers(version);
@@ -101,10 +115,10 @@ public class IndicesModuleTests extends ESTestCase {
             }
         }
         {
-            Version version = VersionUtils.randomVersionBetween(
+            IndexVersion version = IndexVersionUtils.randomVersionBetween(
                 random(),
-                Version.V_7_0_0,
-                VersionUtils.getPreviousVersion(Version.V_8_0_0)
+                IndexVersions.V_7_0_0,
+                IndexVersionUtils.getPreviousVersion(IndexVersions.V_8_0_0)
             );
             assertEquals(EXPECTED_METADATA_FIELDS.length - 1, module.getMapperRegistry().getMetadataMapperParsers(version).size());
         }
@@ -114,14 +128,14 @@ public class IndicesModuleTests extends ESTestCase {
         IndicesModule noPluginsModule = new IndicesModule(Collections.emptyList());
         IndicesModule module = new IndicesModule(fakePlugins);
         MapperRegistry registry = module.getMapperRegistry();
-        assertThat(registry.getMapperParser("fake-mapper", Version.CURRENT), instanceOf(FakeMapperParser.class));
-        assertNull(noPluginsModule.getMapperRegistry().getMapperParser("fake-mapper", Version.CURRENT));
+        assertThat(registry.getMapperParser("fake-mapper", IndexVersion.current()), instanceOf(FakeMapperParser.class));
+        assertNull(noPluginsModule.getMapperRegistry().getMapperParser("fake-mapper", IndexVersion.current()));
         assertThat(
-            registry.getMetadataMapperParsers(Version.CURRENT).size(),
-            greaterThan(noPluginsModule.getMapperRegistry().getMetadataMapperParsers(Version.CURRENT).size())
+            registry.getMetadataMapperParsers(IndexVersion.current()).size(),
+            greaterThan(noPluginsModule.getMapperRegistry().getMetadataMapperParsers(IndexVersion.current()).size())
         );
         Map<String, MetadataFieldMapper.TypeParser> metadataMapperParsers = module.getMapperRegistry()
-            .getMetadataMapperParsers(Version.CURRENT);
+            .getMetadataMapperParsers(IndexVersion.current());
         Iterator<String> iterator = metadataMapperParsers.keySet().iterator();
         assertEquals(IgnoredFieldMapper.NAME, iterator.next());
         String last = null;
@@ -222,56 +236,56 @@ public class IndicesModuleTests extends ESTestCase {
 
     public void testFieldNamesIsLast() {
         IndicesModule module = new IndicesModule(Collections.emptyList());
-        Version version = VersionUtils.randomCompatibleVersion(random(), Version.CURRENT);
+        IndexVersion version = IndexVersionUtils.randomVersion();
         List<String> fieldNames = new ArrayList<>(module.getMapperRegistry().getMetadataMapperParsers(version).keySet());
         assertEquals(FieldNamesFieldMapper.NAME, fieldNames.get(fieldNames.size() - 1));
     }
 
     public void testFieldNamesIsLastWithPlugins() {
         IndicesModule module = new IndicesModule(fakePlugins);
-        Version version = VersionUtils.randomCompatibleVersion(random(), Version.CURRENT);
+        IndexVersion version = IndexVersionUtils.randomVersion();
         List<String> fieldNames = new ArrayList<>(module.getMapperRegistry().getMetadataMapperParsers(version).keySet());
         assertEquals(FieldNamesFieldMapper.NAME, fieldNames.get(fieldNames.size() - 1));
     }
 
     public void testGetFieldFilter() {
-        List<MapperPlugin> mapperPlugins = Arrays.asList(new MapperPlugin() {
+        List<MapperPlugin> mapperPlugins = List.of(new MapperPlugin() {
+        }, new MapperPlugin() {
             @Override
-            public Function<String, Predicate<String>> getFieldFilter() {
-                return MapperPlugin.NOOP_FIELD_FILTER;
+            public Function<String, FieldPredicate> getFieldFilter() {
+                return index -> index.equals("hidden_index") ? HIDDEN_INDEX : FieldPredicate.ACCEPT_ALL;
             }
         }, new MapperPlugin() {
             @Override
-            public Function<String, Predicate<String>> getFieldFilter() {
-                return index -> index.equals("hidden_index") ? field -> false : MapperPlugin.NOOP_FIELD_PREDICATE;
+            public Function<String, FieldPredicate> getFieldFilter() {
+                return index -> HIDDEN_FIELD;
             }
         }, new MapperPlugin() {
             @Override
-            public Function<String, Predicate<String>> getFieldFilter() {
-                return index -> field -> field.equals("hidden_field") == false;
-            }
-        }, new MapperPlugin() {
-            @Override
-            public Function<String, Predicate<String>> getFieldFilter() {
-                return index -> index.equals("filtered") ? field -> field.equals("visible") : MapperPlugin.NOOP_FIELD_PREDICATE;
+            public Function<String, FieldPredicate> getFieldFilter() {
+                return index -> index.equals("filtered") ? ONLY_VISIBLE : FieldPredicate.ACCEPT_ALL;
             }
         });
 
         IndicesModule indicesModule = new IndicesModule(mapperPlugins);
         MapperRegistry mapperRegistry = indicesModule.getMapperRegistry();
-        Function<String, Predicate<String>> fieldFilter = mapperRegistry.getFieldFilter();
+        Function<String, FieldPredicate> fieldFilter = mapperRegistry.getFieldFilter();
         assertNotSame(MapperPlugin.NOOP_FIELD_FILTER, fieldFilter);
 
-        assertFalse(fieldFilter.apply("hidden_index").test(randomAlphaOfLengthBetween(3, 5)));
-        assertTrue(fieldFilter.apply(randomAlphaOfLengthBetween(3, 5)).test(randomAlphaOfLengthBetween(3, 5)));
+        assertThat(fieldFilter.apply("hidden_index"), falseWith(randomAlphaOfLengthBetween(3, 5)));
+        assertThat(fieldFilter.apply(randomAlphaOfLengthBetween(3, 5)), trueWith(randomAlphaOfLengthBetween(3, 5)));
 
-        assertFalse(fieldFilter.apply(randomAlphaOfLengthBetween(3, 5)).test("hidden_field"));
-        assertFalse(fieldFilter.apply("filtered").test(randomAlphaOfLengthBetween(3, 5)));
-        assertFalse(fieldFilter.apply("filtered").test("hidden_field"));
-        assertTrue(fieldFilter.apply("filtered").test("visible"));
-        assertFalse(fieldFilter.apply("hidden_index").test("visible"));
-        assertTrue(fieldFilter.apply(randomAlphaOfLengthBetween(3, 5)).test("visible"));
-        assertFalse(fieldFilter.apply("hidden_index").test("hidden_field"));
+        assertThat(fieldFilter.apply(randomAlphaOfLengthBetween(3, 5)), falseWith("hidden_field"));
+        assertThat(fieldFilter.apply("filtered"), falseWith(randomAlphaOfLengthBetween(3, 5)));
+        assertThat(fieldFilter.apply("filtered"), falseWith("hidden_field"));
+        assertThat(fieldFilter.apply("filtered"), trueWith("visible"));
+        assertThat(fieldFilter.apply("hidden_index"), falseWith("visible"));
+        assertThat(fieldFilter.apply(randomAlphaOfLengthBetween(3, 5)), trueWith("visible"));
+        assertThat(fieldFilter.apply("hidden_index"), falseWith("hidden_field"));
+
+        assertThat(fieldFilter.apply("filtered").modifyHash("hash"), equalTo("only-visible:hide-field:hash"));
+        assertThat(fieldFilter.apply(randomAlphaOfLengthBetween(3, 5)).modifyHash("hash"), equalTo("hide-field:hash"));
+        assertThat(fieldFilter.apply("hidden_index").modifyHash("hash"), equalTo("hide-field:hidden:hash"));
     }
 
     public void testDefaultFieldFilterIsNoOp() {
@@ -282,33 +296,80 @@ public class IndicesModuleTests extends ESTestCase {
             });
         }
         IndicesModule indicesModule = new IndicesModule(mapperPlugins);
-        Function<String, Predicate<String>> fieldFilter = indicesModule.getMapperRegistry().getFieldFilter();
+        Function<String, FieldPredicate> fieldFilter = indicesModule.getMapperRegistry().getFieldFilter();
         assertSame(MapperPlugin.NOOP_FIELD_FILTER, fieldFilter);
     }
 
     public void testNoOpFieldPredicate() {
         List<MapperPlugin> mapperPlugins = Arrays.asList(new MapperPlugin() {
+        }, new MapperPlugin() {
             @Override
-            public Function<String, Predicate<String>> getFieldFilter() {
-                return MapperPlugin.NOOP_FIELD_FILTER;
+            public Function<String, FieldPredicate> getFieldFilter() {
+                return index -> index.equals("hidden_index") ? HIDDEN_INDEX : FieldPredicate.ACCEPT_ALL;
             }
         }, new MapperPlugin() {
             @Override
-            public Function<String, Predicate<String>> getFieldFilter() {
-                return index -> index.equals("hidden_index") ? field -> false : MapperPlugin.NOOP_FIELD_PREDICATE;
-            }
-        }, new MapperPlugin() {
-            @Override
-            public Function<String, Predicate<String>> getFieldFilter() {
-                return index -> index.equals("filtered") ? field -> field.equals("visible") : MapperPlugin.NOOP_FIELD_PREDICATE;
+            public Function<String, FieldPredicate> getFieldFilter() {
+                return index -> index.equals("filtered") ? ONLY_VISIBLE : FieldPredicate.ACCEPT_ALL;
             }
         });
 
         IndicesModule indicesModule = new IndicesModule(mapperPlugins);
         MapperRegistry mapperRegistry = indicesModule.getMapperRegistry();
-        Function<String, Predicate<String>> fieldFilter = mapperRegistry.getFieldFilter();
-        assertSame(MapperPlugin.NOOP_FIELD_PREDICATE, fieldFilter.apply(randomAlphaOfLengthBetween(3, 7)));
-        assertNotSame(MapperPlugin.NOOP_FIELD_PREDICATE, fieldFilter.apply("hidden_index"));
-        assertNotSame(MapperPlugin.NOOP_FIELD_PREDICATE, fieldFilter.apply("filtered"));
+        Function<String, FieldPredicate> fieldFilter = mapperRegistry.getFieldFilter();
+        assertSame(FieldPredicate.ACCEPT_ALL, fieldFilter.apply(randomAlphaOfLengthBetween(3, 7)));
+        assertNotSame(FieldPredicate.ACCEPT_ALL, fieldFilter.apply("hidden_index"));
+        assertNotSame(FieldPredicate.ACCEPT_ALL, fieldFilter.apply("filtered"));
     }
+
+    private static final FieldPredicate HIDDEN_INDEX = new FieldPredicate() {
+        @Override
+        public boolean test(String field) {
+            return false;
+        }
+
+        @Override
+        public String modifyHash(String hash) {
+            return "hidden:" + hash;
+        }
+
+        @Override
+        public long ramBytesUsed() {
+            return 0;
+        }
+    };
+
+    private static final FieldPredicate HIDDEN_FIELD = new FieldPredicate() {
+        @Override
+        public boolean test(String field) {
+            return false == field.equals("hidden_field");
+        }
+
+        @Override
+        public String modifyHash(String hash) {
+            return "hide-field:" + hash;
+        }
+
+        @Override
+        public long ramBytesUsed() {
+            return 0;
+        }
+    };
+
+    private static final FieldPredicate ONLY_VISIBLE = new FieldPredicate() {
+        @Override
+        public boolean test(String field) {
+            return field.equals("visible");
+        }
+
+        @Override
+        public String modifyHash(String hash) {
+            return "only-visible:" + hash;
+        }
+
+        @Override
+        public long ramBytesUsed() {
+            return 0;
+        }
+    };
 }
