@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.ingest;
@@ -11,7 +12,6 @@ package org.elasticsearch.ingest;
 import org.elasticsearch.plugins.IngestPlugin;
 import org.elasticsearch.plugins.Plugin;
 
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -20,18 +20,15 @@ import java.util.Map;
 public class IngestTestPlugin extends Plugin implements IngestPlugin {
     @Override
     public Map<String, Processor.Factory> getProcessors(Processor.Parameters parameters) {
-        return Collections.singletonMap(
-            "test",
-            (factories, tag, description, config) -> new TestProcessor("id", "test", "description", doc -> {
-                doc.setFieldValue("processed", true);
-                if (doc.hasField("fail") && doc.getFieldValue("fail", Boolean.class)) {
-                    throw new IllegalArgumentException("test processor failed");
-                }
-                if (doc.hasField("drop") && doc.getFieldValue("drop", Boolean.class)) {
-                    return null;
-                }
-                return doc;
-            })
-        );
+        return Map.of("test", (factories, tag, description, config, projectId) -> new TestProcessor("id", "test", "description", doc -> {
+            doc.setFieldValue("processed", true);
+            if (doc.hasField("fail") && doc.getFieldValue("fail", Boolean.class)) {
+                throw new IllegalArgumentException("test processor failed");
+            }
+            if (doc.hasField("drop") && doc.getFieldValue("drop", Boolean.class)) {
+                return null;
+            }
+            return doc;
+        }));
     }
 }
