@@ -14,27 +14,34 @@ import org.elasticsearch.action.admin.cluster.snapshots.restore.RestoreSnapshotR
 import org.elasticsearch.action.admin.indices.settings.get.GetSettingsResponse;
 import org.elasticsearch.action.bulk.BulkRequestBuilder;
 import org.elasticsearch.action.bulk.BulkResponse;
-import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.action.support.IndicesOptions;
 import org.elasticsearch.cluster.routing.allocation.decider.ThrottlingAllocationDecider;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.blobstore.BlobContainer;
 import org.elasticsearch.common.blobstore.BlobPath;
 import org.elasticsearch.common.blobstore.BlobStore;
+import org.elasticsearch.common.blobstore.OperationPurpose;
 import org.elasticsearch.common.blobstore.support.FilterBlobContainer;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.ByteSizeUnit;
 import org.elasticsearch.common.util.BigArrays;
+import org.elasticsearch.common.util.concurrent.AbstractRunnable;
 import org.elasticsearch.common.util.concurrent.AtomicArray;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.env.Environment;
+import org.elasticsearch.index.Index;
 import org.elasticsearch.index.snapshots.blobstore.BlobStoreIndexShardSnapshot;
+import org.elasticsearch.index.store.LuceneFilesExtensions;
+import org.elasticsearch.indices.IndicesService;
 import org.elasticsearch.indices.recovery.RecoverySettings;
-import org.elasticsearch.license.LicenseService;
+import org.elasticsearch.indices.recovery.RecoveryState;
+import org.elasticsearch.license.LicenseSettings;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.plugins.PluginsService;
 import org.elasticsearch.plugins.RepositoryPlugin;
 import org.elasticsearch.repositories.IndexId;
+import org.elasticsearch.repositories.RepositoriesMetrics;
 import org.elasticsearch.repositories.RepositoriesService;
 import org.elasticsearch.repositories.Repository;
 import org.elasticsearch.repositories.RepositoryData;
@@ -56,24 +63,29 @@ import java.io.FilterInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Path;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertHitCount;
+import static org.elasticsearch.xpack.searchablesnapshots.SearchableSnapshots.CACHE_PREWARMING_THREAD_POOL_NAME;
 import static org.elasticsearch.xpack.searchablesnapshots.SearchableSnapshots.SNAPSHOT_CACHE_ENABLED_SETTING;
 import static org.elasticsearch.xpack.searchablesnapshots.SearchableSnapshots.SNAPSHOT_CACHE_PREWARM_ENABLED_SETTING;
+import static org.hamcrest.Matchers.anyOf;
 import static org.hamcrest.Matchers.emptyCollectionOf;
+import static org.hamcrest.Matchers.endsWith;
 import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
@@ -93,7 +105,7 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
     protected Settings nodeSettings() {
         return Settings.builder()
             .put(super.nodeSettings())
-            .put(LicenseService.SELF_GENERATED_LICENSE_TYPE.getKey(), "trial")
+            .put(LicenseSettings.SELF_GENERATED_LICENSE_TYPE.getKey(), "trial")
             .put(SearchableSnapshots.CACHE_FETCH_ASYNC_THREAD_POOL_SETTING + ".max", randomIntBetween(1, 32))
             .put(SearchableSnapshots.CACHE_FETCH_ASYNC_THREAD_POOL_SETTING + ".keep_alive", "1s")
             .put(SearchableSnapshots.CACHE_PREWARMING_THREAD_POOL_SETTING + ".max", randomIntBetween(1, 32))
@@ -110,13 +122,7 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
         for (int index = 0; index < nbIndices; index++) {
             final String indexName = "index-" + index;
             final int nbShards = randomIntBetween(1, 5);
-            createIndex(
-                indexName,
-                Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, nbShards)
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                    .build()
-            );
+            createIndex(indexName, indexSettings(nbShards, 0).build());
             shardsPerIndex.put(indexName, nbShards);
         }
 
@@ -131,16 +137,15 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
             if (nbDocs > 0) {
                 final BulkRequestBuilder bulkRequest = client().prepareBulk();
                 for (int i = 0; i < nbDocs; i++) {
-                    bulkRequest.add(client().prepareIndex(indexName).setSource("foo", randomBoolean() ? "bar" : "baz"));
+                    bulkRequest.add(prepareIndex(indexName).setSource("foo", randomBoolean() ? "bar" : "baz"));
                 }
                 final BulkResponse bulkResponse = bulkRequest.get();
-                assertThat(bulkResponse.status(), is(RestStatus.OK));
                 assertThat(bulkResponse.hasFailures(), is(false));
             }
             docsPerIndex.put(indexName, nbDocs);
         }
 
-        final Path repositoryPath = node().getEnvironment().resolveRepoFile(randomAlphaOfLength(10));
+        final Path repositoryPath = node().getEnvironment().resolveRepoDir(randomAlphaOfLength(10));
         final Settings.Builder repositorySettings = Settings.builder().put("location", repositoryPath);
         if (randomBoolean()) {
             repositorySettings.put("chunk_size", randomIntBetween(100, 1000), ByteSizeUnit.BYTES);
@@ -148,17 +153,17 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
 
         logger.debug("--> registering repository");
         assertAcked(
-            client().admin().cluster().preparePutRepository("repository").setType(FsRepository.TYPE).setSettings(repositorySettings.build())
+            clusterAdmin().preparePutRepository(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT, "repository")
+                .setType(FsRepository.TYPE)
+                .setSettings(repositorySettings.build())
         );
 
         logger.debug("--> snapshotting indices");
-        final CreateSnapshotResponse createSnapshotResponse = client().admin()
-            .cluster()
-            .prepareCreateSnapshot("repository", "snapshot")
-            .setIncludeGlobalState(false)
-            .setIndices("index-*")
-            .setWaitForCompletion(true)
-            .get();
+        final CreateSnapshotResponse createSnapshotResponse = clusterAdmin().prepareCreateSnapshot(
+            TEST_REQUEST_TIMEOUT,
+            "repository",
+            "snapshot"
+        ).setIncludeGlobalState(false).setIndices("index-*").setWaitForCompletion(true).get();
 
         final int totalShards = shardsPerIndex.values().stream().mapToInt(i -> i).sum();
         assertThat(createSnapshotResponse.getSnapshotInfo().successfulShards(), equalTo(totalShards));
@@ -167,16 +172,14 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
         ensureGreen("index-*");
 
         logger.debug("--> deleting indices");
-        assertAcked(client().admin().indices().prepareDelete("index-*"));
+        assertAcked(indicesAdmin().prepareDelete("index-*"));
 
         logger.debug("--> deleting repository");
-        assertAcked(client().admin().cluster().prepareDeleteRepository("repository"));
+        assertAcked(clusterAdmin().prepareDeleteRepository(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT, "repository"));
 
         logger.debug("--> registering tracking repository");
         assertAcked(
-            client().admin()
-                .cluster()
-                .preparePutRepository("repository")
+            clusterAdmin().preparePutRepository(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT, "repository")
                 .setType("tracking")
                 .setVerify(false)
                 .setSettings(repositorySettings.build())
@@ -188,20 +191,25 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
 
         final Map<String, List<String>> exclusionsPerIndex = new HashMap<>();
         for (int index = 0; index < nbIndices; index++) {
-            exclusionsPerIndex.put("index-" + index, randomSubsetOf(Arrays.asList("fdt", "fdx", "nvd", "dvd", "tip", "cfs", "dim")));
+            exclusionsPerIndex.put(
+                "index-" + index,
+                randomSubsetOf(Stream.of(LuceneFilesExtensions.values()).map(LuceneFilesExtensions::getExtension).toList())
+            );
         }
 
         logger.debug("--> mounting indices");
+        final List<String> mountedIndices = new ArrayList<>(nbIndices);
         final Thread[] threads = new Thread[nbIndices];
         final AtomicArray<Throwable> throwables = new AtomicArray<>(nbIndices);
-        final CountDownLatch latch = new CountDownLatch(1);
+        final CountDownLatch startMounting = new CountDownLatch(1);
 
         for (int i = 0; i < threads.length; i++) {
             int threadId = i;
             final String indexName = "index-" + threadId;
+            mountedIndices.add(indexName);
             final Thread thread = new Thread(() -> {
                 try {
-                    latch.await();
+                    startMounting.await();
 
                     final Settings restoredIndexSettings = Settings.builder()
                         .put(SNAPSHOT_CACHE_ENABLED_SETTING.getKey(), true)
@@ -213,6 +221,7 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
                     final RestoreSnapshotResponse restoreSnapshotResponse = client().execute(
                         MountSearchableSnapshotAction.INSTANCE,
                         new MountSearchableSnapshotRequest(
+                            TEST_REQUEST_TIMEOUT,
                             indexName,
                             "repository",
                             "snapshot",
@@ -229,9 +238,10 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
                     assertThat(restoreSnapshotResponse.status(), is(RestStatus.OK));
                     assertThat(restoreSnapshotResponse.getRestoreInfo().successfulShards(), equalTo(shardsPerIndex.get(indexName)));
                     assertThat(restoreSnapshotResponse.getRestoreInfo().failedShards(), equalTo(0));
-                    assertHitCount(client().prepareSearch(indexName).setSize(0).setTrackTotalHits(true).get(), docsPerIndex.get(indexName));
+                    assertHitCount(client().prepareSearch(indexName).setSize(0).setTrackTotalHits(true), docsPerIndex.get(indexName));
 
-                    final GetSettingsResponse getSettingsResponse = client().admin().indices().prepareGetSettings(indexName).get();
+                    final GetSettingsResponse getSettingsResponse = indicesAdmin().prepareGetSettings(TEST_REQUEST_TIMEOUT, indexName)
+                        .get();
                     assertThat(getSettingsResponse.getSetting(indexName, SNAPSHOT_CACHE_ENABLED_SETTING.getKey()), equalTo("true"));
                     assertThat(getSettingsResponse.getSetting(indexName, SNAPSHOT_CACHE_PREWARM_ENABLED_SETTING.getKey()), equalTo("true"));
 
@@ -244,18 +254,72 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
             thread.start();
         }
 
-        latch.countDown();
+        // some indices are randomly removed before prewarming completes
+        final Set<String> deletedIndicesDuringPrewarming = randomBoolean() ? Set.copyOf(randomSubsetOf(mountedIndices)) : Set.of();
+
+        final CountDownLatch startPrewarmingLatch = new CountDownLatch(1);
+        final var threadPool = getInstanceFromNode(ThreadPool.class);
+        final int maxUploadTasks = threadPool.info(CACHE_PREWARMING_THREAD_POOL_NAME).getMax();
+        final CountDownLatch maxUploadTasksCreated = new CountDownLatch(maxUploadTasks);
+        for (int i = 0; i < maxUploadTasks; i++) {
+            threadPool.executor(CACHE_PREWARMING_THREAD_POOL_NAME).execute(new AbstractRunnable() {
+
+                @Override
+                protected void doRun() throws Exception {
+                    maxUploadTasksCreated.countDown();
+                    startPrewarmingLatch.await();
+                }
+
+                @Override
+                public void onFailure(Exception e) {
+                    throw new AssertionError(e);
+                }
+            });
+        }
+        safeAwait(maxUploadTasksCreated);
+        var prewarmingExecutor = threadPool.executor(CACHE_PREWARMING_THREAD_POOL_NAME);
+        assertThat(prewarmingExecutor, instanceOf(ThreadPoolExecutor.class));
+        assertThat(((ThreadPoolExecutor) prewarmingExecutor).getActiveCount(), equalTo(maxUploadTasks));
+
+        startMounting.countDown();
         for (Thread thread : threads) {
             thread.join();
         }
 
         assertThat("Failed to mount snapshot as indices", throwables.asList(), emptyCollectionOf(Throwable.class));
 
-        logger.debug("--> waiting for background cache prewarming to");
+        logger.debug("--> waiting for background cache to complete");
         assertBusy(() -> {
-            final ThreadPool threadPool = getInstanceFromNode(ThreadPool.class);
-            assertThat(threadPool.info(SearchableSnapshots.CACHE_FETCH_ASYNC_THREAD_POOL_NAME).getQueueSize(), nullValue());
-            assertThat(threadPool.info(SearchableSnapshots.CACHE_PREWARMING_THREAD_POOL_NAME).getQueueSize(), nullValue());
+            if (threadPool.executor(SearchableSnapshots.CACHE_FETCH_ASYNC_THREAD_POOL_NAME) instanceof ThreadPoolExecutor executor) {
+                assertThat(executor.getQueue().size(), equalTo(0));
+                assertThat(executor.getActiveCount(), equalTo(0));
+            }
+        });
+
+        if (deletedIndicesDuringPrewarming.isEmpty() == false) {
+            Set<Index> deletedIndices = deletedIndicesDuringPrewarming.stream().map(this::resolveIndex).collect(Collectors.toSet());
+            logger.debug("--> deleting indices [{}] before prewarming", deletedIndices);
+            assertAcked(indicesAdmin().prepareDelete(deletedIndicesDuringPrewarming.toArray(String[]::new)));
+
+            var indicesService = getInstanceFromNode(IndicesService.class);
+            assertBusy(() -> deletedIndices.forEach(deletedIndex -> assertThat(indicesService.hasIndex(deletedIndex), is(false))));
+        }
+
+        startPrewarmingLatch.countDown();
+
+        // wait for recovery to be DONE
+        assertBusy(() -> {
+            var recoveryResponse = indicesAdmin().prepareRecoveries(mountedIndices.toArray(String[]::new))
+                .setIndicesOptions(IndicesOptions.LENIENT_EXPAND_OPEN)
+                .get();
+            assertThat(
+                recoveryResponse.shardRecoveryStates()
+                    .values()
+                    .stream()
+                    .flatMap(Collection::stream)
+                    .allMatch(recoveryState -> recoveryState.getStage().equals(RecoveryState.Stage.DONE)),
+                is(true)
+            );
         });
 
         logger.debug("--> loading snapshot metadata");
@@ -285,14 +349,55 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
                     .stream()
                     .filter(file -> file.metadata().hashEqualsContents() == false)
                     .filter(file -> exclusionsPerIndex.get(indexName).contains(IndexFileNames.getExtension(file.physicalName())) == false)
-                    .collect(Collectors.toList());
+                    .toList();
 
-                for (BlobStoreIndexShardSnapshot.FileInfo expectedPrewarmedBlob : expectedPrewarmedBlobs) {
-                    for (int part = 0; part < expectedPrewarmedBlob.numberOfParts(); part++) {
-                        final String blobName = expectedPrewarmedBlob.partName(part);
-                        long actualBytesRead = tracker.totalBytesRead(blobName);
-                        long expectedBytesRead = expectedPrewarmedBlob.partBytes(part);
-                        assertThat("Blob [" + blobName + "] not fully warmed", actualBytesRead, greaterThanOrEqualTo(expectedBytesRead));
+                if (deletedIndicesDuringPrewarming.contains(indexName) == false) {
+                    for (BlobStoreIndexShardSnapshot.FileInfo blob : expectedPrewarmedBlobs) {
+                        for (int part = 0; part < blob.numberOfParts(); part++) {
+                            final String blobName = blob.partName(part);
+                            try {
+                                assertThat(
+                                    "Blob [" + blobName + "][" + blob.physicalName() + "] not prewarmed",
+                                    tracker.totalBytesRead(blobName),
+                                    equalTo(blob.partBytes(part))
+                                );
+                            } catch (AssertionError ae) {
+                                assertThat(
+                                    "Only blobs from physical file with specific extensions are expected to be prewarmed over their sizes ["
+                                        + blobName
+                                        + "]["
+                                        + blob.physicalName()
+                                        + "] but got :"
+                                        + ae,
+                                    blob.physicalName(),
+                                    anyOf(endsWith(".cfe"), endsWith(".cfs"))
+                                );
+                            }
+                        }
+                    }
+                } else {
+                    for (BlobStoreIndexShardSnapshot.FileInfo blob : expectedPrewarmedBlobs) {
+                        for (int part = 0; part < blob.numberOfParts(); part++) {
+                            final String blobName = blob.partName(part);
+                            try {
+                                assertThat(
+                                    "Blob [" + blobName + "][" + blob.physicalName() + "] should not have been fully prewarmed",
+                                    tracker.totalBytesRead(blobName),
+                                    nullValue()
+                                );
+                            } catch (AssertionError ae) {
+                                assertThat(
+                                    "Only blobs from physical file with specific extensions are expected to be prewarmed over their sizes ["
+                                        + blobName
+                                        + "]["
+                                        + blob.physicalName()
+                                        + "] but got :"
+                                        + ae,
+                                    blob.physicalName(),
+                                    anyOf(endsWith(".cfe"), endsWith(".cfs"))
+                                );
+                            }
+                        }
                     }
                 }
             }
@@ -305,12 +410,11 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
     }
 
     private TrackingRepositoryPlugin getTrackingRepositoryPlugin() {
-        for (RepositoryPlugin plugin : getInstanceFromNode(PluginsService.class).filterPlugins(RepositoryPlugin.class)) {
-            if (plugin instanceof TrackingRepositoryPlugin) {
-                return ((TrackingRepositoryPlugin) plugin);
-            }
-        }
-        throw new IllegalStateException("tracking repository missing");
+        return getInstanceFromNode(PluginsService.class).filterPlugins(RepositoryPlugin.class)
+            .filter(p -> p instanceof TrackingRepositoryPlugin)
+            .map(p -> (TrackingRepositoryPlugin) p)
+            .findFirst()
+            .orElseThrow(() -> new IllegalStateException("tracking repository missing"));
     }
 
     /**
@@ -345,18 +449,20 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
             NamedXContentRegistry namedXContentRegistry,
             ClusterService clusterService,
             BigArrays bigArrays,
-            RecoverySettings recoverySettings
+            RecoverySettings recoverySettings,
+            RepositoriesMetrics repositoriesMetrics
         ) {
             return Collections.singletonMap(
                 "tracking",
-                (metadata) -> new FsRepository(metadata, env, namedXContentRegistry, clusterService, bigArrays, recoverySettings) {
-
-                    @Override
-                    protected void assertSnapshotOrGenericThread() {
-                        if (enabled.get()) {
-                            super.assertSnapshotOrGenericThread();
-                        }
-                    }
+                (projectId, metadata) -> new FsRepository(
+                    projectId,
+                    metadata,
+                    env,
+                    namedXContentRegistry,
+                    clusterService,
+                    bigArrays,
+                    recoverySettings
+                ) {
 
                     @Override
                     protected BlobStore createBlobStore() throws Exception {
@@ -387,8 +493,8 @@ public class SearchableSnapshotsPrewarmingIntegTests extends ESSingleNodeTestCas
             }
 
             @Override
-            public InputStream readBlob(String blobName, long position, long length) throws IOException {
-                return new FilterInputStream(super.readBlob(blobName, position, length)) {
+            public InputStream readBlob(OperationPurpose purpose, String blobName, long position, long length) throws IOException {
+                return new FilterInputStream(super.readBlob(purpose, blobName, position, length)) {
                     long bytesRead = 0L;
 
                     @Override
