@@ -14,9 +14,7 @@ import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.xpack.core.ssl.SSLConfigurationSettings;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.function.Function;
 
 /**
  * Handles the configuration and parsing of settings for the <code>xpack.http.</code> prefix
@@ -51,19 +49,18 @@ public class HttpSettings {
     static final Setting<String> PROXY_HOST = Setting.simpleString(PROXY_HOST_KEY, Property.NodeScope);
     static final Setting<String> PROXY_SCHEME = Setting.simpleString(PROXY_SCHEME_KEY, Scheme::parse, Property.NodeScope);
     static final Setting<Integer> PROXY_PORT = Setting.intSetting(PROXY_PORT_KEY, 0, 0, 0xFFFF, Property.NodeScope);
-    static final Setting<List<String>> HOSTS_WHITELIST = Setting.listSetting(
+    static final Setting<List<String>> HOSTS_WHITELIST = Setting.stringListSetting(
         "xpack.http.whitelist",
-        Collections.singletonList("*"),
-        Function.identity(),
+        List.of("*"),
         Property.NodeScope,
         Property.Dynamic
     );
 
     static final Setting<ByteSizeValue> MAX_HTTP_RESPONSE_SIZE = Setting.byteSizeSetting(
         "xpack.http.max_response_size",
-        new ByteSizeValue(10, ByteSizeUnit.MB),   // default
+        ByteSizeValue.of(10, ByteSizeUnit.MB),   // default
         ByteSizeValue.ONE, // min
-        new ByteSizeValue(50, ByteSizeUnit.MB),   // max
+        ByteSizeValue.of(50, ByteSizeUnit.MB),   // max
         Property.NodeScope
     );
 
